[gd_scene load_steps=6 format=3 uid="uid://d16hxjjeg5ucn"]

[ext_resource type="Script" path="res://scripts/creaters.gd" id="1_exjmb"]
[ext_resource type="Texture2D" uid="uid://cxksqwsvsgj4e" path="res://img/icons8-back-arrow-100.png" id="3_07ucq"]
[ext_resource type="AudioStream" uid="uid://68dpwomnlrku" path="res://sounds/Menu.wav" id="4_lhv21"]
[ext_resource type="AudioStream" uid="uid://ket4w1sc3tsb" path="res://sounds/Button.wav" id="5_md0t0"]

[sub_resource type="LabelSettings" id="LabelSettings_jc1uf"]
font_size = 30

[node name="creaters" type="Node"]
process_mode = 3
script = ExtResource("1_exjmb")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 435.0
offset_top = 23.0
offset_right = 671.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "The project team"

[node name="dev_name" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 474.0
offset_top = 190.0
offset_right = 643.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Kirill Ligostaev
"

[node name="dev_name2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 432.0
offset_top = 259.0
offset_right = 683.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Evelina Mikhailovskaya"

[node name="Designer" type="Label" parent="Control"]
layout_mode = 0
offset_left = 528.0
offset_top = 359.0
offset_right = 626.0
offset_bottom = 386.0
theme_override_font_sizes/font_size = 30
text = "Designer
"
label_settings = SubResource("LabelSettings_jc1uf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="designer_name" type="Label" parent="Control"]
layout_mode = 0
offset_left = 452.0
offset_top = 424.0
offset_right = 723.0
offset_bottom = 466.0
theme_override_font_sizes/font_size = 30
text = "Ulyana Propisnova"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.501
anchor_top = 7.185
anchor_right = 14.501
anchor_bottom = 7.185
offset_left = -68.04
offset_top = -156.4
offset_right = 77.96
offset_bottom = -120.4
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Developers"

[node name="back_button" type="Button" parent="."]
process_mode = 3
offset_left = 34.0
offset_top = 501.0
offset_right = 142.0
offset_bottom = 609.0
icon = ExtResource("3_07ucq")
flat = true

[node name="menuAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lhv21")

[node name="buttonAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_md0t0")

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="finished" from="menuAudio" to="." method="_on_menu_audio_finished"]
